# hops

./: .gitignore  pyproject.toml
dataset-generator/datasets/10.1/: full.jsonl  full_depth0.jsonl  full_depth1.jsonl  full_ordered.jsonl
dataset-generator/datasets/10.1/hops10.1/: A0.jsonl  B0.jsonl  C0.jsonl  D0.jsonl  E0.jsonl  F0.jsonl  G0.jsonl  H0.jsonl  I0.jsonl  J0.jsonl  hop_A1.jsonl  hop_B1.jsonl  hop_C1.jsonl  hop_D1.jsonl  hop_E1.jsonl  hop_F1.jsonl  hop_G1.jsonl  hop_H1.jsonl  hop_I1.jsonl  hop_J1.jsonl
dataset-generator/datasets/10.1plus1/: full.jsonl
dataset-generator/datasets/10.1plus1/hops10.1plus1/: combined_wrapper.jsonl  hop_A1.jsonl  hop_B1.jsonl  hop_C1.jsonl  hop_D1.jsonl  hop_E1.jsonl  hop_F1.jsonl  hop_G1.jsonl  hop_H1.jsonl  hop_I1.jsonl  hop_J1.jsonl
dataset-generator/datasets/10.2/: full_ordered.jsonl  wrapper.jsonl  wrapper_depth1.jsonl  wrapper_depth2.jsonl
dataset-generator/datasets/10.2/hops10.2/: hop_A1.jsonl  (+19 more)
dataset-generator/datasets/10.5/: 10.5addon.jsonl  10.5addon_depth3.jsonl  10.5addon_depth4.jsonl  10.5addon_depth5.jsonl  full.jsonl
dataset-generator/generator/: create_alternating_dataset.py  create_base_dataset.py  create_datasets.sh  create_wrapper_dataset.py  flaw_remover.py  separate_datasets.py
dataset-generator/seed/: create_seed_docs.py  seeds_10F_1D.jsonl  seeds_10F_1D_plus1.jsonl  seeds_10F_2D.jsonl  seeds_10F_5D.jsonl
rankers/: ranked_charts.py  repsim_ranker.py
train/: embedding_trajectory.py  logit_eval.py  logprob_trajectory.py  train_model.py  train_model.sh
train/token-mod/: tokenizer_check.py
(+30 files in other folders)
